@@ -84,25 +84,25 @@ type t
  
 exception Out_of_bounds
   (** Raised when an operation violates the bounds of the rope. *)
- 
+  
 val max_length : int
   (** Maximum length of the rope. *)
- 
+  
 (** {6 Creation and conversions} *)
- 
+  
 val empty : t
   (** The empty rope. *)
- 
+  
 val of_latin1: string -> t
   (** Constructs a unicode rope from a latin-1 string. *)
 
 val of_ustring : UTF8.t -> t
   (** [of_string s] returns a rope corresponding to the string [s].
-Operates in [O(n)] time. *)
- 
+      Operates in [O(n)] time. *)
+  
 val to_ustring : t -> UTF8.t
   (** [to_string r] returns the string corresponding to the rope [r]. *)
- 
+  
 val of_uchar: UChar.t -> t
   (** [of_uchar c] returns a rope containing exactly character [c].*)
 
@@ -128,29 +128,29 @@ val uppercase: t -> t
       [s].*)
 
 (** {6 Properties } *)
- 
+  
 val is_empty : t -> bool
   (** Returns whether the rope is empty or not. *)
- 
+  
 val length : t -> int
   (** Returns the length of the rope ([O(1)]). *)
- 
+  
 val height : t -> int
   (** Returns the height (depth) of the rope. *)
- 
+  
 val balance : t -> t
   (** [balance r] returns a balanced copy of the [r] rope. Note that ropes are
       automatically rebalanced when their height exceeds a given threshold, but
       [balance] allows to invoke that operation explicity. *)
- 
+  
 (** {6 Operations } *)
- 
+  
 val concat : t -> t -> t
   (** [concat r u] concatenates the [r] and [u] ropes. In general, it operates
       in [O(log(min n1 n2))] amortized time.
       Small ropes are treated specially and can be appended/prepended in
       amortized [O(1)] time. *)
- 
+  
 val append_char : UChar.t -> t -> t
   (** [append_char c r] returns a new rope with the [c] character at the end
       in amortized [O(1)] time. *)
@@ -209,6 +209,11 @@ val range_iter : (UChar.t -> unit) -> int -> int -> t -> unit
       from an explicit loop using [get].
       Raises Out_of_bounds in the same cases as [sub]. *)
   
+val range_iteri : 
+  (int -> UChar.t -> unit) -> ?base:int -> int -> int -> t -> unit
+  (** As [range_iter], but passes base + index of the character in the
+      substring defined by next to arguments. *)
+
 val bulk_iter : (UTF8.t -> unit) -> t -> unit
   (** as iter but over larger chunks of data *)
 
@@ -230,29 +235,29 @@ val backwards: t -> UChar.t Enum.t
 val of_backwards: UChar.t Enum.t -> t
 
 (*These functions are probably completely useless
-val bulk_backwards: t -> UTF8.t Enum.t
-val of_bulk_backwards: UTF8.t Enum.t -> t
+  val bulk_backwards: t -> UTF8.t Enum.t
+  val of_bulk_backwards: UTF8.t Enum.t -> t
 *)
 
 val create : int -> t
-(** As [String.create] *)
+  (** As [String.create] *)
 val init : int -> (int -> UChar.t) -> t
-(** As [String.init] *)
+  (** As [String.init] *)
 val of_int : int -> t
 val of_float : float -> t
 val to_int : t -> int
 val to_float : t -> float
-(** As [String.*] *)
+  (** As [String.*] *)
 val bulk_map : (UTF8.t -> UTF8.t) -> t -> t
 val map : (UChar.t -> UChar.t) -> t -> t
-(** As [String.map] *)
+  (** As [String.map] *)
 val bulk_filter_map : (UTF8.t -> UTF8.t option) -> t -> t
 val filter_map : (UChar.t -> UChar.t option) -> t -> t
-(** As [String.filter_map] *)
+  (** As [String.filter_map] *)
 
 val index : t -> UChar.t -> int
-(** As [String.index] *)
-
+  (** As [String.index] *)
+val index_from : t -> int -> UChar.t -> int
 
 
 (** {6 Boilerplate code}*)
